# torch-stuff

./: .bumpversion.cfg  README.md  pyproject.toml  shell.nix
.github/workflows/: publish.yml
