[project]
name = "torch-things"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/dwahdany/torch-stuff"
Repository = "https://github.com/dwahdany/torch-stuff.git"
Issues = "https://github.com/dwahdany/torch-stuff/issues"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.5",
    "setuptools>=78.1.0",
    "wheel>=0.45.1",
]
